# wiflx

./: .gitignore  CMakeLists.txt  LICENSE  README.md  notes.txt  overlay_onto_plutosdr_fw.sh
cmake/modules/: Findfftw3f.cmake  Findlibfec.cmake  Findlibiio.cmake  Findliquid-dsp.cmake  Findsoapysdr.cmake
docs/: mac-design.txt  notes.txt  performance.txt  wiflx-stack-design.odt
patches/: protobuf-install-arm.patch
profiling/: CMakeLists.txt
scripts/: apply_patches
src/: config.h.in
src/ap/: CMakeLists.txt  config.h  config_json.h  iwf_mac_interface.h  l2iwf.cpp  l2iwf.h  mac.cpp  mac.h  mac_phy_interface.h  mac_sched.cpp  main.cpp  phy.cpp  phy.h
src/common/: CMakeLists.txt  clock.h  codel.cpp  codel.h  config.h  config_json.h  error.h  fq_codel.cpp  fq_codel.h  gpio.cpp  gpio.h  hash.cpp  hash.h  io_context.h  log.cpp  log.h  net.h  object_factory.h  ofdm.cpp  ofdm.h  os_utils.cpp  os_utils.h  packet.h  pipebuf.h  profiling.h  radio.cpp  radio.h  sc.cpp  sc.h  timer.h  tuntap.cpp  tuntap.h  txq.h  utils.cpp  utils.h
src/common/messages/: CMakeLists.txt  mac.proto
src/rm/: CMakeLists.txt  config.h  config_json.h  iwf_mac_interface.h  l2iwf.cpp  l2iwf.h  mac.cpp  mac.h  mac_phy_interface.h  main.cpp  phy.cpp  phy.h
src/scratch/: CMakeLists.txt  ad9361-iiostream  ad9361-iiostream.c  cw.c  cw.h  flexframesync64_debug.py  framesync64_debug.py  framesync64_debug_with_loopback.py  mxg_framegen64_waveform.m  sc_common.c  sc_common.h  sc_flexframegen.c  sc_flexframegen.h  sc_flexframesync.c  sc_flexframesync.h  sc_framegen.c  sc_framegen.h  sc_framesync.c  sc_framesync.h  sc_qdetector_cccf.c  sc_qdetector_cccf.h
src/test/: CMakeLists.txt  config.h  config_json.h  cw_phy.cpp  cw_phy.h  cw_phy_test.cpp  cw_phy_test.h  mac_phy_interface.h  main.cpp  ofdm_phy.cpp  ofdm_phy.h  ofdm_phy_test.cpp  ofdm_phy_test.h  sc_phy.cpp  sc_phy.h  sc_phy_test.cpp  sc_phy_test.h  test_base.h
tests/: pluto_100ksps.ftr  pluto_1024ksps.ftr  pluto_1280ksps.ftr  pluto_160ksps.ftr  pluto_256ksps.ftr  pluto_256ksps_ph_eq.ftr  pluto_320ksps.ftr  pluto_512ksps.ftr  pluto_640ksps.ftr  pluto_80ksps.ftr
tests/host/: ap_1000khz.cfg  ap_500khz.cfg  ap_75khz.cfg  init.sh  rm1_1000khz.cfg  rm1_500khz.cfg  rm1_75khz.cfg  rm2_1000khz.cfg  rm2_500khz.cfg  rm2_75khz.cfg  start.sh  test_ofdm_rx_1000khz.cfg  test_ofdm_rx_200khz.cfg  test_ofdm_rx_500khz.cfg  test_ofdm_tx_1000khz.cfg  test_ofdm_tx_200khz.cfg  test_ofdm_tx_500khz.cfg  test_sc_rx_50khz.cfg  test_sc_tx_50khz.cfg
tests/host/bladerf/: test_cw_tx.cfg  test_ofdm_tx_1000khz.cfg
tests/host/uhd/: ap_200khz.cfg  ap_500khz.cfg  test_cw_tx.cfg  test_ofdm_rx_200khz.cfg  test_ofdm_tx_200khz.cfg  test_ofdm_tx_500khz.cfg  test_sc_rx_50khz.cfg
